# notifier

./: Cargo.toml
.github/workflows/: rust.yml
src/: client.rs  lib.rs  main.rs
