[package]
name = "notifier"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = { version = "2.0.1", features = ["serde"] }
directories = "6.0.0"
eframe = "0.31.1"
gtk = "0.18.2"
notify-rust = { version = "4.11.7", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full"] }
toml = "0.8.23"
tray-icon = "0.20.1"

[[bin]]
name="client"
path="src/client.rs"
